@@ -587,7 +587,7 @@ usage (int status)
     fprintf (stderr, _("Try `%s --help' for more information.\n"), program_name);
   else
     printf (_("\
-Usage: grub-setup [OPTION]... DEVICE\n\
+Usage: %s [OPTION]... DEVICE\n\
 \n\
 Set up images to boot from DEVICE.\n\
 DEVICE must be a GRUB device (e.g. `(hd0,1)').\n\
@@ -605,6 +605,7 @@ DEVICE must be a GRUB device (e.g. `(hd0,1)').\n\
 \n\
 Report bugs to <%s>.\n\
 "),
+	    program_name,
 	    DEFAULT_BOOT_FILE, DEFAULT_CORE_FILE, DEFAULT_DIRECTORY,
 	    DEFAULT_DEVICE_MAP, PACKAGE_BUGREPORT);
 
